Markdown for backgrounds, races, spells, and items